welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: Missing closing brace `}' assumed here
override def run() { def faireV(){for (i<-1 to 3) { for(i<-1 to 4) {avance(); baisseBrosse(); leveBrosse(); gauche(); 
^PictureMono2:2: error: expected start of definition
override def run() { def faireV(){for (i<-1 to 3) { for(i<-1 to 4) {avance(); baisseBrosse(); leveBrosse(); gauche(); 
         ^